--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,29 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "start": "webpack serve --mode development --open",
-    "dev": "npm start",
-    "build": "webpack --mode production"
+    "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.4.0",
+    "phaser": "^3.80.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
-    "phaser": "^3.80.0",
-    "firebase": "^10.4.0"
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-dev-server": "^4.15.0",
-    "babel-loader": "^9.1.3",
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.22.5",
+    "@vitejs/plugin-react": "^5.1.0",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.9.4",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "vite": "^7.1.12",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   }
 }
