--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,16 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
+
 }
